6 sprint commit